force-app/main/default/objects/HCPUserMapping__mdt/HCPUserMapping__mdt.object-meta.xml
<CustomObject>
    <label>HCP User Mapping</label>
    <pluralLabel>HCP User Mappings</pluralLabel>
</CustomObject>