force-app/main/default/objects/HCPUserMapping__mdt/fields/LanguageLocaleKey__c.field-meta.xml
<CustomField>
    <fullName>LanguageLocaleKey__c</fullName>
    <label>LanguageLocaleKey</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>