force-app/main/default/objects/HCPUserMapping__mdt/fields/LocaleSidKey__c.field-meta.xml
<CustomField>
    <fullName>LocaleSidKey__c</fullName>
    <label>LocaleSidKey</label>
    <length>10</length>
    <type>Text</type>
</CustomField>