force-app/main/default/objects/HCPUserMapping__mdt/fields/LoginUrl__c.field-meta.xml
<CustomField>
    <fullName>LoginUrl__c</fullName>
    <label>LoginUrl</label>
    <length>60</length>
    <type>Text</type>
</CustomField>