force-app/main/default/objects/HCPUserMapping__mdt/fields/TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneSidKey__c</fullName>
    <label>TimeZoneSidKey</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>