force-app/main/default/objects/HCPUserMapping__mdt/listViews/All_Markets.listView-meta.xml
<ListView>
    <fullName>All_Markets</fullName>
    <columns>MasterLabel</columns>
    <columns>Country__c</columns>
    <columns>LanguageLocaleKey__c</columns>
    <columns>LocaleSidKey__c</columns>
    <columns>TimeZoneSidKey__c</columns>
    <columns>Permission_Set_Name__c</columns>
    <columns>LoginUrl__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Markets</label>
    <language>en_US</language>
</ListView>